--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@capacitor/android": "^8.0.1",
+    "@capacitor/cli": "^8.0.1",
+    "@capacitor/core": "^8.0.1",
+    "@capacitor/ios": "^8.0.1",
     "@ionic/react": "^8.7.17",
     "@ionic/react-router": "^8.7.17",
+    "appwrite": "^21.5.0",
     "bootstrap": "^5.3.8",
+    "cordova-plugin-ionic": "^5.5.3",
+    "firebase": "^12.8.0",
     "ionicons": "^8.0.13",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -20,9 +27,11 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^5.1.1",
     "autoprefixer": "^10.4.23",
     "eslint": "^9.39.1",
