Fix: Switch to official @capacitor/live-updates plugin

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -8,7 +8,7 @@
   "plugins": {
     "LiveUpdates": {
       "appId": "db608ddf",
-      "channel": "Production",
+      "channel": "production",
       "autoUpdateMethod": "background",
       "maxVersions": 2
     }
