--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "@capacitor/cli": "^8.0.1",
     "@capacitor/core": "^8.0.1",
     "@capacitor/ios": "^8.0.1",
+    "@capacitor/live-updates": "^0.4.0",
     "@ionic/react": "^8.7.17",
     "@ionic/react-router": "^8.7.17",
     "appwrite": "^21.5.0",
     "bootstrap": "^5.3.8",
-    "cordova-plugin-ionic": "^5.5.3",
     "firebase": "^12.8.0",
     "ionicons": "^8.0.13",
     "react": "^19.2.0",
