--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "@ionic/react-router": "^8.7.17",
     "appwrite": "^21.5.0",
     "bootstrap": "^5.3.8",
+    "clsx": "^2.1.1",
     "firebase": "^12.8.0",
     "ionicons": "^8.0.13",
+    "lucide-react": "^0.563.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^5.3.4"
+    "react-router-dom": "^5.3.4",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
@@ -34,9 +37,12 @@
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^5.1.1",
     "autoprefixer": "^10.4.23",
+    "body-parser": "^2.2.2",
+    "cors": "^2.8.6",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "express": "^5.2.1",
     "globals": "^16.5.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
