--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@capacitor/core": "^7.0.0",
     "@capacitor/ios": "^7.0.0",
     "@capacitor/live-updates": "^0.4.0",
+    "@capacitor/status-bar": "^7.0.0",
     "@ionic/react": "^8.7.17",
     "@ionic/react-router": "^8.7.17",
     "appwrite": "^21.5.0",
@@ -43,7 +44,9 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "express": "^5.2.1",
+    "fs-extra": "^11.3.3",
     "globals": "^16.5.0",
+    "globby": "^16.1.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
     "typescript": "~5.9.3",
