--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "@capacitor/ios": "^7.0.0",
     "@capacitor/live-updates": "^0.4.0",
     "@capacitor/status-bar": "^7.0.0",
+    "@fullcalendar/daygrid": "^6.1.20",
+    "@fullcalendar/interaction": "^6.1.20",
+    "@fullcalendar/list": "^6.1.20",
+    "@fullcalendar/react": "^6.1.20",
     "@ionic/react": "^8.7.17",
     "@ionic/react-router": "^8.7.17",
     "appwrite": "^21.5.0",
